# transaction-border-controller

./: Cargo.toml  README.md  rebuild.md  sim_pizza_output.txt  test_output.txt
crates/coreprover-bridge/: Cargo  Cargo.toml  README  build  build.rs
crates/coreprover-bridge/src/: lib  lib.rs
crates/coreprover-bridge/src/client/: escrow_client  escrow_client.rs  mod  mod.rs
crates/coreprover-bridge/src/events/: listener  listerner.rs  mod  mod.rs
crates/coreprover-bridge/src/types/: escrow  escrow.rs  mod  mod.rs  payment_profile  payment_profile.rs
crates/coreprover-cli/: Cargo  README
crates/coreprover-cli/src/: config  main
crates/coreprover-cli/src/commands/: escrow  mod  monitor  monitor.rs
crates/coreprover-contracts/: README  foundry
crates/coreprover-contracts/script/: Deploy.s  DeployTestnet.s
crates/coreprover-contracts/src/: CoreProverEscrow  ReceiptVault
crates/coreprover-contracts/src/interfaces/: ICoreProverEscrow  IReceiptVault
crates/coreprover-contracts/src/libraries/: EscrowLib  SignatureVerifier
crates/coreprover-contracts/test/: CoreProverEscrow.t  ReceiptVault.t
crates/coreprover-contracts/test/integration/: FullFlow.t
crates/coreprover-sdk/: Cargo  Cargo.toml  README
crates/coreprover-sdk/examples/: digital_goods  physical_goods  pizza_delivery
crates/coreprover-sdk/src/: client  lib
crates/coreprover-sdk/src/builder/: escrow_builder  mod
crates/coreprover-service/: Cargo  Cargo.toml  README
crates/coreprover-service/config/: default
crates/coreprover-service/migrations/: 001_initial_schema
crates/coreprover-service/src/: engine.rs  lib  main  types.rs
crates/coreprover-service/src/api/: handlers  mod  routes
crates/coreprover-service/src/profiles/: mod  templates
crates/coreprover-service/src/settlement/: engine  mod  monitor
crates/coreprover-service/src/workers/: indexer_worker  mod  timeout_worker
crates/coreprover-service/test_v2_obsolete/: pizza_final_sim.rs  pizza_gpt_final.rs
crates/coreprover-service/tests/: pizza_readme.md
crates/coreprover-zk/: Cargo  Cargo.toml  README
crates/coreprover-zk/circuits/: README  ownership
crates/coreprover-zk/src/: lib  prover  verifier
crates/tbc-core/: Cargo  Cargo.toml  README
crates/tbc-core/src/: gateway  gateway.rs  lib  lib.rs  protocol  protocol.rs  types  types.rs
crates/tbc-core/src/tgp/: messages.rs  mod.rs  state.rs  types.rs  validation.rs
crates/tbc-gateway/: Cargo  Cargo.toml  README
crates/tbc-gateway/src/: agent  agent.rs  lib  lib.rs  router  router.rs
crates/txip/: README_TXIP.md  blockchain_types_v03.rs  coreprover_types_v03.rs  timestamp_types_v03.rs  txip_http_handler_v03.rs  txip_mod_v03.rs  txip_session_v03.rs  txip_types_v03.rs
docs/: Rebuild.md
docs/specs/: DEPRECATED-VGP-00.md  LICENSE.txt  TBC-00.md  TBC-MGMT-00.md  TG-00v1.md  TGP-00.md  TGP-01-ECONOMIC-ENVELOPE-EXT.md  TGP-01-PROOF-OF-SETTLEMENT.md  TGP-CP-00  TGP-EX-00  TXIP_RUST_ANALYSIS.md  TxIP-00.md  V03_VERIFICATION.md  x402-EXT.md
docs/specs/appendices/: README.md  TGP-Appendix-B-COREPROVER  TGP-Appendix-C-ZK-BUYER.md  TGP-Appendix-D-ZKS.md  TGP-Appendix-E-ZK-BS.md  TGP-Appendix-F-ZKX.md  TGP-Appendix-G-ZK-RECEIPT.md  ZKB-01-PROOF.md
scripts/: cheatsheet.md
spec/: TGP-00.md  coreprover.md
spec/appendices/: TGP-Appendix-A-TAI  ZKS-01-PROOF.md
src/controller/: Cargo.toml
src/controller/src/: config.rs  controller.rs  main.rs  prover_client.rs  telemetry.rs  tgp.rs  x402_adapter.rs
src/coreprover/: Cargo.toml
src/coreprover/src/: lib.rs  zk_receipt.rs
tests/: state_transition_matrix.rs
tests/harness/: baseline.rs  context.rs  engine_driver.rs  engine_factory.rs  fault.rs  harness.rs  mock_chain.rs  mod.rs  model_checker.rs  scenarios.rs  stress.rs  time.rs  trace.rs  types.rs
