[workspace]
resolver = "2"
members = [
    "crates/tbc-core",
    "crates/tbc-gateway",
    "crates/coreprover-bridge",
    "crates/coreprover-service",
    "crates/coreprover-zk",
    "crates/coreprover-cli",
    "crates/coreprover-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TBC Team"]
repository = "https://github.com/yourusername/transaction-border-controller"

[workspace.dependencies]
toml = "0.8"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum/Web3
ethers = { version = "2.0", features = ["abigen", "ws"] }
alloy-primitives = "0.7"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Testing
proptest = "1.4"
clap = { version = "4.4", features = ["derive"] }
