[package]
name = "coreprover-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
alloy-primitives = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
ethers = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }