[package]
name = "coreprover-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "coreprover-service"
path = "src/main.rs"

[dependencies]
coreprover-bridge = { path = "../coreprover-bridge" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
ethers = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }

[dev-dependencies]
proptest = { workspace = true }