[package]
name = "controller"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
description = "Transaction Border Controller (TBC) reference implementation for the TGP/TxIP protocol stack."

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

coreprover = { path = "../coreprover" }